// ヘルスチェックタイプ
syntax = "proto3";

package api.admin;

enum AdminHealthType {
  AdminNone = 0;
  AdminSuccess = 1;
}
