// ヘルスチェック
syntax = "proto3";

package api.game;

import "health/adminHealth/admin_health_enum.proto";

message AdminHealth {
  int64 health_id = 1;
  string name = 2;
  AdminHealthEnum admin_health_enum = 3;
}
