// ヘルスチェック
syntax = "proto3";

package api.game;

import "health/masterHealth/master_health_type_enum.proto";

message MasterHealth {
  int64 health_id = 1;
  string name = 2;
  MasterHealthType master_health_type = 3;
}
